# supertonal

./: .gitignore  .gitmodules  Blueprint.jucer  Blueprint.pkgproj  CMakeLists.txt  NOTES.md  README.md  functions  supertonal.jucer
Assets/: Guitar Plate.aif
JuceLibraryCode/: BinaryData.cpp  BinaryData.h  JuceHeader.h  JucePluginDefines.h
Modules/: CMakeLists.txt
Source/: Constants.h  PluginAudioParameters.h  PluginAudioProcessor.cpp  PluginAudioProcessor.h  PluginAudioProcessorEditor.cpp  PluginAudioProcessorEditor.h  PluginEditor.cpp  PluginEditor.h  PluginLookAndFeel.cpp  PluginLookAndFeel.h  PluginPresetComponent.cpp  PluginPresetComponent.h  PluginPresetManager.cpp  PluginPresetManager.h  PluginProcessor.cpp  PluginProcessor.h  PluginUtils.cpp  PluginUtils.h  SIMDMath.h
Source/CTAGDRC/: PluginEditor.h  PluginProcessor.h
Source/CTAGDRC/dsp/: LevelDetector.cpp  SmoothingFilter.cpp
Source/CTAGDRC/dsp/include/: Compressor.h  DelayLine.h
Source/CTAGDRC/gui/include/: Meter.h  MeterBackground.h  MeterNeedle.h  ModSlider.h
Source/CTAGDRC/util/include/: SIMDMath.h
Source/Components/: AmpComponent.h  CabinetComponent.h  DelayComponent.h  EquiliserComponent.h  MainComponent.cpp  MainComponent.h  MixerComponent.h  PedalComponent.h  PreAmpComponent.h  PresetComponent.h  TopComponent.h  TunerComponent.h
Source/Processors/: AmplifierEqualiser.h  BaseProcessor.cpp  BaseProcessor.h  BitCrusher.h  CircuitQuantityHelper.cpp  CircuitQuantityHelper.h  GraphicEqualiser.h  InstrumentEqualiser.cpp  InstrumentEqualiser.h  JuceProcWrapper.h  MouseDrive.cpp  MouseDrive.h  MouseDriveWDF.h  OmegaProvider.h  ParamUtils.h  ParametricEqualiser.cpp  ParametricEqualiser.h  TubeScreamer.cpp  TubeScreamer.h  TubeScreamerTone.h  TubeScreamerWDF.h
Source/Processors/CTAGDRC/dsp/: Compressor.cpp  CrestFactor.cpp  GainComputer.cpp  LookAhead.cpp
Source/Processors/CTAGDRC/gui/include/: LabeledSlider.h  SCLookAndFeel.h
Source/Processors/Equilisers/: AmplifierEqualiser.cpp  AmplifierEqualiser.h  GraphicEqualiser.cpp  GraphicEqualiser.h  InstrumentEqualiser.cpp  InstrumentEqualiser.h
Source/Processors/Modulators/: Chorus.h  Flanger.h  Phaser.h
Source/Processors/Other/: BitCrusher.h  Krusher.h
Source/Processors/Saturators/: MouseDrive.cpp  MouseDrive.h  MouseDriveWDF.h  TubeScreamer.cpp  TubeScreamer.h  TubeScreamerWDF.h
Source/Utilities/: CircuitQuantityHelper.cpp  CircuitQuantityHelper.h  GinAudioFifo.h  OmegaProvider.h
